Default DTO Exception and refactoring of searching using Example